[package]
name = "misc-winfixes"
version = "0.1.0"
authors = ["Jeffrey McAteer <jeffrey.p.mcateer@gmail.com>"]
edition = "2018"


[dependencies]
systray = { git = "https://github.com/qdot/systray-rs.git" }
winapi = { version = "0.3", features = ["wincon", "winuser"] }
#dirs = "3.0"




[build-dependencies]
winres = "0.1"


[package.metadata.winres]
OriginalFilename = "misc-winfixes.exe"
LegalCopyright = "Copyright © 2021 Jeffrey McAteer <jeffrey.p.mcateer@gmail.com>"




